tests/invalid/type/manual_ex009.pts
import Io;


function main() : void {
    int x;
    Io.printLine(x.toString()); // Erreur : E4001 UNINITIALIZED_READ
}